language_tests/source_files/invalid/generics.tr
// Missing bound should still fail (guard against over-permissive fallback).

func geqMissingBound[T](_ a: T, _ b: T) -> bool {
    a >= b
}

func main() {
    let _ = geqMissingBound(1, 2)
}
